# ai-news-noti-bot

./: .gitignore  Dockerfile  DockerfileApi  DockerfileLocal  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  samconfig.toml  template.yaml  tsconfig.json
.github/workflows/: deploy-ai-news-agent-stack.yml  deploy-dev.yml  deploy-develop.yml  deploy-register-site-api.yml  deploy-register-site-web.yml  deploy.yml  dev-deploy-ai-news-agent-stack.yml  develop-news-scraper-deploy.yml  develop-register-site-deploy.yml  prod-deploy-ai-news-agent-stack.yml
common/: package.json  tsconfig.json
common/config/: index.ts
common/loader/: index.ts
common/model/: Message.ts  Site.ts
common/types/model/: MessageInfo.ts  Messages.ts  SiteInfo.ts  index.ts
lambdas/news-scraper/: package.json  samconfig.toml  template.yaml  tsconfig.json
lambdas/news-scraper-agent/: .gitignore  crawl-test.py
lambdas/news-scraper/scripts/: updateLambda.sh
lambdas/news-scraper/src/: index.ts  local.ts
lambdas/news-scraper/src/extractor/: Extractor.ts
lambdas/news-scraper/src/extractor/implementation/: AiTimesExtractor.ts  ClueitExtractor.ts  DevoceanExtractor.ts  GeekNewsExtractor.ts  (+1 more)
lambdas/news-scraper/src/factory/: ExcractorFactory.ts
lambdas/news-scraper/src/service/: KakaoWorkService.ts  TrendService.ts  index.ts
lambdas/register-site-api/: package.json  tsconfig.json
lambdas/register-site-api/src/: index.ts  test.ts
news-scraper-agent/: .dockerignore  .gitignore  Dockerfile  README.md  connect_db.py  crawl-test.py  env_config.py  main.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  utils.py
news-scraper-agent/agents/: __init__.py  crawling_agent.py  filtering_agent.py  html_parser_agent.py  message_agent.py  sorting_agent.py
news-scraper-agent/agents/components/: LangChainLLMCaller.py
news-scraper-agent/config/: __init__.py  env_config.py  log.py  prompt_config.py
news-scraper-agent/decorations/: log_time.py
news-scraper-agent/graph/: __init__.py  build_graph.py  state.py
news-scraper-agent/loader/: __init__.py  connect.py
news-scraper-agent/models/: __init__.py  message.py  site.py
news-scraper-agent/service/: __init__.py  message_service.py  site_service.py
news-scraper-agent/tests/: crawling_agent_test.py
news-scraper-agent/tests/fixtures/: crawling_agent_test_aitimes.json  crawling_agent_test_dvc.json  crawling_agent_test_gn.json  crawling_agent_test_sds.json
news-scraper-agent/type/: kakaowork_message.py
news-scraper-agent/utils/: __init__.py  graph_image_utils.py  kakaowork_message_builder.py  time_utils.py
pages/postSiteForm/: error.html  index.html  success.html
scraper-lambda/: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
scraper-lambda/events/: event_json.json  event_render.json  event_static.json
scraper-lambda/src/: Dockerfile  app.py  requirements.txt  used_type.py
scraper-lambda/tests/unit/: test_handler.py
scripts/: invokeLambda.sh
scripts/scraper/: updateLambda.sh
src/: index.ts  local.ts
src/api/: index.ts  readme.md  test.ts
src/config/: index.ts
src/loader/: index.ts
src/model/: Message.ts  Site.ts
src/service/: KakaoWorkService.ts  TrendService.ts  index.ts
src/types/: index.ts
src/types/aws/: lambda.ts
src/types/class/: GoogleSheetsManager.ts  KakaoworkMessageManager.ts  PuppeteerManager.ts
src/types/interface/: BlockType.ts  MessageData.ts  MessageInfo.ts  Messages.ts  SendMessageDto.ts  SiteData.ts  SiteInfo.ts
static/postSiteForm/: index.html
(+10 files in other folders)
