[tool.poetry]
name = "news-scraper-agent"
version = "0.1.0"
description = ""
authors = ["hyejungg <kimhyejung12@naver.com>", "jongwoo328 <jongwoo328@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.2.35"
langsmith = "^0.1.134"
langchain-openai = "^0.2.2"
langchain = "^0.3.3"
python-dotenv = "^1.0.1"
typing-extensions = "^4.12.2"
mongoengine = "^0.29.1"
pytz = "^2024.2"
langchain-community = "^0.3.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
