[tool.poetry]
name = "scraper-lambda"
version = "0.1.0"
description = ""
authors = ["hyejungg <kimhyejung12@naver.com>", "JongwooLee <jongwoo328@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
playwright = "1.48.0"
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
